maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:11: error: type mismatch;
 found   : Int
 required: plm.universe.Direction
  setDirection(direction);
               ^PledgeMaze:13: error: not found: value setDireciton
  setDireciton(pos); // bring back to the initial position
  ^